--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,9 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <!-- Google fonts -->
+    <!-- Google fonts
     <link href="fonts.googleapis.com/css?family=Roboto:400,400italic,500,700|Playfair+Display:400,400italic,700,700italic|Montserrat:400|Karla:400"
-          rel="stylesheet">
+          rel="stylesheet"> -->
 
     <!--Title will be set within the code -->
     <title></title>
